# cpp-project-template

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  run.sh  run2.sh  runOld.sh  run_cross_compile.sh
.github/workflows/: ci.yml
Callbacks/: FunctionPointerToMember.cpp
CppInterview/: C++TestQuiz.c  CpaAssessments.h  basics.c  checkIfLittleOrBigEndian.c  declarations.c  embeddedC.txt  getMostOccuringCharFromString.c  myOwnAtoi.c  removeSameCharactersFromThe2ndString.c
CppInterview/PolymorphismDemistyfied/PolymorphismDemistyfied/: PolymorphismDemistyfied.cpp
CppInterview/numberRangesAndNumbers/: primeNumbers_SievesOfErathoAndAtkin.c
MoveSemantics/: MovingTemporaryObjects.cpp
UnnamedFunctions/: Apply-lambda-to-each-element-of-array.cpp  Lamda-access-local-variables - Copy.cpp  Lamda-capturing-local-variables.cpp
app/: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  config.txt
app/cmake/: BuildInfo.cmake  ClangTidy.cmake  CodeChecker.cmake  Coverage.cmake  CppCheck.cmake  CppLint.cmake  Doxygen.cmake  FilterCompileCommands.cmake  GetSFML.cmake  Infer.cmake  Memcheck.cmake  Sanitizers.cmake  Toolchain_Linux_x86_64.cmake  Toolchain_qnx-aarch64le.cmake  Toolchain_x86_64.cmake  UnitTest.cmake  Valgrind.cmake
app/cmake/Toolchain/: Linux_arm64.cmake  Linux_x86_64.cmake  Qnx_aarch64le.cmake
app/src/: CMakeLists.txt  main.cpp
app/src/Animation/: Animation.cpp  Animation.h  ExplosionEffect.cpp  ExplosionEffect.h
app/src/Background/: Background.cpp  Background.h
app/src/Configuration/: ConfigReader.cpp  ConfigReader.h  Difficulty.cpp  Difficulty.h  Resolution.cpp  Resolution.h
app/src/Game/: ExecutablePath.cpp  ExecutablePath.h  Game.cpp  Game.h  GameCar.cpp  GameCar.h
app/src/GameCar/: GameCar.cpp  GameCar.h
app/test/: CMakeLists.txt
app/test/functional/: CMakeLists.txt
app/test/fuzzing/: CMakeLists.txt  fuzz_ConfigReader.cpp
app/test/integration/: CMakeLists.txt
app/test/system/: CMakeLists.txt
app/test/unit/: CMakeLists.txt  main_unit_test.cpp
app/test/unit/Configuration/: CMakeLists.txt  ConfigReaderTest.cpp  DifficultyTest.cpp  ResolutionTest.cpp
app/utils/: apps_build.sh  apps_run.sh  clean.sh  filter_compile_commands.py  gdb_client.sh  unit_tests_report.py
ci/: Dockerfile  Dockerfile_arm64
cmake/: Toolchain_x86_64.cmake  UnitTest.cmake
docker/: Dockerfile
